<resources>
    <string name="app_name">Flair</string>

    <string name="content_authority">com.flairmusicplayer.flair</string>

    <string name="test_device_id">ABCDEF012345</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_shuffle_all">Shuffle all</string>
    <string name="tab_last_opened">Last opened tab</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_playlists">Playlists</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="equalizer">Equalizer</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search music</string>
    <string name="no_search_results">No search results</string>
    <string name="most_played">Most Played</string>
    <string name="recently_played">Recently Played</string>
    <string name="recently_added">Recently Added</string>
    <string name="no_songs_in_playlist">No songs yet</string>
    <string name="no_files">No files</string>
    <string name="playing_notification">Flair Playing Notification</string>
    <string name="widget_big_name">Flair Widget Big</string>
    <string name="need_permission">Flair needs to access external storage to list and play songs</string>
    <string name="favorite_playlist">Favorites</string>

    <string name="select_start_page">Select the start page to show when app launches</string>
    <string name="start_page">Start page</string>

    <string name="inserted_x_songs_into_playlist_x">Inserted %1$d songs into playlist %2$s</string>
    <string name="action_remove_from_favorites">Remove from Favorites</string>
    <string name="action_play_next">Play next</string>
    <string name="action_add_to_queue">Add to queue</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_share">Share</string>
    <string name="share_message">Check out this music player app</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.flairmusicplayer.flair</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="licenses">Open Source Licences</string>
    <string name="info">A simple and easy to use music player app which will have a ton of features in future so hang on!</string>
    <string name="nav_library">Library</string>
    <string name="nav_folders">Folders</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_share_app">Share App</string>
    <string name="about_app">About App</string>
    <string name="album_art">Album Art</string>
    <string name="artist_image">Artist Image</string>
    <string name="play_pause_toggle">Play Pause Toggle</string>
    <string name="item_image">Item Image</string>
    <string name="menu">Menu</string>
    <string name="queue_toggle">Queue Toggle</string>
    <string name="song_id">id</string>
    <string name="song_name">track</string>
    <string name="song_album">album</string>
    <string name="song_artist">artist</string>
    <string name="song_duration">duration</string>
    <string name="song_position">position</string>
    <string name="song_playing">playing</string>
    <string name="failed_to_acquire_audio_focus">Failed to acquire audio focus</string>
    <string name="could_not_play">Couldn\'t play file</string>
    <string name="default_notification_color">#403f4d</string>
    <string name="content_path">content://</string>
    <string name="app_package">package</string>
    <string name="chooser_title">Share via</string>
    <string name="no_audio_id">No audio id</string>
    <string name="no_equalizer_found">No equalizer found</string>
    <string name="external">external</string>
    <string name="content_media">content://media</string>
    <string name="time_zero">0:00</string>
    <string name="shuffle_all">Shuffle All</string>

</resources>
