<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/nav_library"/>
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/nav_folders"/>
    </group>


    <group android:id="@+id/others">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about"/>

        <item
            android:id="@+id/share_app"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share_app"/>
    </group>

</menu>
