<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        style="@style/Toolbar"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_toolbar"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/grey_dark"
                    app:srcCompat="@drawable/ic_launcher_foreground"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/info"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <Button
                android:id="@+id/show_licences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/licenses"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>